FCache / FLayer updated